[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nms-txt"
version = "0.1.0"
description = "A text-based space exploration game powered by Claude AI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "anthropic>=0.20.0",
]

[project.scripts]
nms-txt = "nms_txt.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["nms_txt"]
